--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -37,7 +37,7 @@
 			<div class="section section--darker-theme-color-bg">
 				<div class="container">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-12 amp-custom">
 								<div class="nav-grid nav-grid--out">
 									{% for category in site.category_list %}
 									<h3> {{ category.title}} </h3>
