--- a/docs/amplify-theme/_sass/objects/_section.scss
+++ b/docs/amplify-theme/_sass/objects/_section.scss
@@ -14,7 +14,7 @@
 .section-top {
 	@media (min-width: $screen-sm-min) {
 		padding-top: 0px;
-		padding-bottom: 150px;
+		//padding-bottom: 150px;
 	}
 }
 
