--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -6,7 +6,7 @@
 	<body class="{{ site.amplify.color_theme }}">
 		{% include site-header.html %}
 		<div class="hero-subheader{% if page.grid_navigation %} hero-subheader--before-out{% endif %}">
-			<div class="container">
+			<div class="container homepage-header">
 				<div class="row">
 					<div class="col-md-7">
 						<div class="align-container" data-mh>
@@ -17,19 +17,28 @@
 								{% if page.description %}
 									<p class="hero-subheader__desc">{{ page.description }}</p>
 								{% endif %}
-								{% for button in page.buttons %}
-									{% if button.external_url == true %}
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ button.url }}" class="btn btn--dark btn--rounded btn--w-icon">
-										{% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
-										{{ button.content }}
-									</a>
-									{% else %}
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ button.url }}" class="btn btn--dark btn--rounded btn--w-icon">
-										{% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
-										{{ button.content }}
-									</a>
-									{% endif %}
-								{% endfor %}
+								<div id="button-logo-container">
+									{% for button in page.buttons %}
+										{% if button.external_url == true %}
+										<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ button.url }}" class="btn btn--dark btn--rounded btn--w-icon">
+											{% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
+											{{ button.content }}
+										</a>
+										{% else %}
+										<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ button.url }}" class="btn btn--dark btn--rounded btn--w-icon">
+											{% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
+											{{ button.content }}
+										</a>
+										{% endif %}
+									{% endfor %}
+									<div class="logos">
+										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/JS-Small-White@1x.png">
+										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/React-Small-White@1x.png">
+										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/Apple-Small-White@1x.png">
+										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/Droid-Small-White@1x.png">
+									</div>
+									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Images/Phone-Banner@2x.png">
+								</div>
 							</div><!-- /.align-inner -->
 						</div><!-- /.align-container -->
 					</div><!-- /.col -->
@@ -60,17 +69,17 @@
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div><!-- /.hero-subheader -->
-		<div class="photo-credit">
+		<!--<div class="photo-credit">
 			<span>
 				Photo by <a target="_new" href="https://unsplash.com/@juandinella?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Juan Di Nella</a>
 			</span>
-		</div>
+		</div>-->
 
 		{% if page.marketing_message%}
 		<div class="section section--darker-theme-color-bg">
-				<div class="container">
+				<div class="section-container">
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col--12">
 							{{ page.marketing_message }}
 						</div><!-- /.col -->
 					</div><!-- /.row -->
@@ -79,31 +88,175 @@
 		{% endif %}
 
 		{% if page.marketing_grid%}
-		<div class="section section-top">
+		<div class="section section-top" id="marketing-section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="marketing-grid">
-							<div class="row">
-								{% for item in page.marketing_grid %}
-									<div class="col-sm-6 col-lg-4">
-										<span class="marketing-grid-item">
-											<div class="marketing-grid-content" data-mh>
-												<h2 class="marketing-grid__title">{{ item.title }}</h2>
-												<p>{{ item.excerpt }}</p>
-											</div><!-- /.nav-grid__content -->
-										</span><!-- /.nav-grid__item -->
-									</div><!-- /.col -->
-								{% endfor %}
-							</div><!-- /.row -->
-						</div><!-- /.nav-grid -->
-					</div><!-- /.col -->
+					<div class="header col-sm-11">
+						A library and command line interface (CLI) made for building cloud-powered applications
+					</div>
+					<div class="subheader col-sm-11">
+						Default implementation included for AWS; Open and pluggable for any custom backend service.
+					</div>
+				</div>
+				<div>
+					<button class="btn" id="top-section-btn">Get Started</button>
+				</div>
+				<div class="row">
+					<div class="marketing-grid">
+						<div class="row">
+							{% for item in page.marketing_grid %}
+								<div class="col-sm-4 marketing-div">
+									<span class="marketing-grid-item">
+										<div class="marketing-grid-content" data-mh>
+											<h2 class="marketing-grid__title">{{ item.title }}</h2>
+											<p>{{ item.excerpt }}</p>
+										</div><!-- /.nav-grid__content -->
+									</span><!-- /.nav-grid__item -->
+								</div><!-- /.col -->
+							{% endfor %}
+						</div><!-- /.row -->
+					</div><!-- /.nav-grid -->
 				</div><!-- /.row -->
+				<div class="row">
+					<div class="subheader bottom-subheader">
+						For mobile development, check out the AWS Mobile SDKs for <a>iOS</a>, <a>Android</a>, and <a>Xamarin</a>.
+					</div>
+				</div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
 		{% endif %}
 
-		{% if page.grid_navigation %}
+		{% if page.marketing_grid%}
+		<div class="section section-top not-top-section">
+			<div class="container">
+				<div class="header" id="launch-header">
+					Launch quickly with Amplify building blocks
+				</div>
+				<div class="subheader" id="launch-subheader">
+					AWS Amplify comes with building blocks for frontend and mobile developers to interact with the Cloud. You can mix and match categories below as needed.
+				</div>
+				<div id="grids-container row">
+					<div class="col-sm-12 cloud-grid">
+						<p class="launch-grid-title">Cloud Features</p>
+						<div class="cloud-col">
+							<div class="row">
+								{% for item in page.cloud_grid_left %}
+										<span class="cloud-grid-item cloud-grid-item-left">
+											<div class="cloud-grid-content" data-mh>
+												<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
+												<div class="cloud-grid-text">
+													<h2 class="cloud-grid__title">{{ item.title }}</h2>
+													<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
+												</div>
+											</div><!-- /.nav-grid__content -->
+										</span><!-- /.nav-grid__item -->
+								{% endfor %}
+							</div><!-- /.row -->
+						</div><!-- /.nav-grid -->
+						<div class="cloud-col">
+							<div class="row">
+								{% for item in page.cloud_grid_right %}
+										<span class="cloud-grid-item cloud-grid-item-right">
+											<div class="cloud-grid-content" data-mh>
+												<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
+												<div class="cloud-grid-text">
+													<h2 class="cloud-grid__title">{{ item.title }}</h2>
+													<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
+												</div>
+											</div><!-- /.nav-grid__content -->
+										</span><!-- /.nav-grid__item -->
+								{% endfor %}
+							</div><!-- /.row -->
+						</div><!-- /.nav-grid -->
+					</div><!-- /.col -->
+					<div class="utility-modules-grid">
+						<p class="launch-grid-title">Utility Modules</p>
+						<div class="row">
+							{% for item in page.utility_modules %}
+									<span class="cloud-grid-item">
+										<div class="cloud-grid-content" data-mh>
+											<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
+											<div class="cloud-grid-text">
+												<h2 class="cloud-grid__title">{{ item.title }}</h2>
+												<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
+											</div>
+										</div><!-- /.nav-grid__content -->
+									</span><!-- /.nav-grid__item -->
+							{% endfor %}
+						</div><!-- /.row -->
+					</div>
+				</div>
+			</div><!-- /.container -->
+		</div><!-- /.section -->
+		{% endif %}
+
+		{% if page.marketing_grid%}
+		<div class="section section-top not-top-section">
+			<div class="container">
+				<div class="header" id="library-header">
+					A beautiful UI library out of the box
+				</div>
+				<div class="subheader">
+					Launch with our minimally-styled components and UI or whitelabel to your own specification.
+				</div>
+				<div>
+					<button class="btn" id="library-btn">View Library</button>
+				</div>
+				<div class="row image-container">
+					<img class="library-image" id="library-auth" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Images/Auth@1x.png">
+					<img class="library-image" id="library-chat" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Images/Chat@1x.png">
+				</div>
+			</div><!-- /.container -->
+		</div><!-- /.section -->
+		{% endif %}
+
+		{% if page.marketing_grid%}
+		<div class="section section-top not-top-section" id="bottom-section">
+			<div class="container">
+				<div class="header" id="install-header">
+					Install and configure with the tech of your choice
+				</div>
+				<div class="subheader">
+					Install and configure AWS Amplify to start working with cloud services.
+				</div>
+				<div class="install-container row">
+					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+						<div class="install-box" id="js-box">
+							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/JS-Small-White@2x.png">
+							<div class="install-text">Build with JavaScript</div>
+							<button class="install-button" id="js-btn">Get Started</button>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+						<div class="install-box" id="react-box">
+							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/React-Small-White@2x.png">
+							<div class="install-text">Build with React</div>
+							<button class="install-button" id="react-btn">Get Started</button>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+						<div class="install-box" id="react-native-box">
+							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/React-Small-White@2x.png">
+							<div class="install-text">Build with React Native</div>
+							<button class="install-button" id="react-native-btn">Get Started</button>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+						<div class="install-box" id="angular-box">
+							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/Angular-Med-White@1x.png">
+							<div class="install-text">Build with Angular</div>
+							<button class="install-button" id="angular-btn">Get Started</button>
+						</div>
+					</div>
+				</div>
+				<div>
+					<button class="btn" id="view-all-platforms-btn">View all platforms</button>
+				</div>
+			</div><!-- /.container -->
+		</div><!-- /.section -->
+		{% endif %}
+
+		<!-- {% if page.grid_navigation %}
 			<div class="section section--darker-theme-color-bg">
 				<div class="container">
 					<div class="row">
@@ -117,20 +270,20 @@
 													<h2 class="nav-grid__title">{{ item.title }}</h2>
 													<p>{{ item.excerpt }}</p>
 												</div><!-- /.nav-grid__content -->
-												<p class="nav-grid__btn">
+												<!--<p class="nav-grid__btn">
 													{{ item.cta }}
-													<i class="icon icon--arrow-right"></i>
-												</p>
-											</a><!-- /.nav-grid__item -->
-										</div><!-- /.col -->
-									{% endfor %}
-								</div><!-- /.row -->
-							</div><!-- /.nav-grid -->
-						</div><!-- /.col -->
-					</div><!-- /.row -->
-				</div><!-- /.container -->
-			</div><!-- /.section -->
-		{% endif %}
+													<i class="icon icon--arrow-right"></i>-->
+												<!-- </p> -->
+											<!-- </a>/.nav-grid__item -->
+										<!-- </div>/.col -->
+									<!--{% endfor %}-->
+								<!-- </div>/.row -->
+							<!-- </div>/.nav-grid -->
+						<!-- </div>/.col -->
+					<!-- </div>/.row -->
+				<!-- </div>/.container -->
+			<!-- </div>/.section -->
+		<!--{% endif %} -->
 
 		{% include site-footer.html %}
 	</body>
