--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -65,8 +65,8 @@
 		</div><!-- /.container -->
 		<div class="row notification-bar">
 			<div class="col-xs-11">
-				🚀 AWS Amplify supports AI-powered chatbots with new Interactions category.
-				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/interactions_guide"
+				🚀 AWS Amplify now supports Ionic Components.
+				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/tutorials/building-ionic-4-apps/"
 					class="link-button">
 					➡️Learn More 
 				</a>
