--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -7,73 +7,86 @@
 		{% include site-header.html %}
 
 		{% if page.marketing_grid%}
-		<div class="section section-category">
-	 
-			<div class="container">
-				<div class="row">
- 
-					<div class="col-md-12">
-						<div class="marketing-grid">
-							<div class="row">
-								{% for item in page.marketing_grid %}
-									<div class="col-sm-8 col-lg-8">
-										<span class="marketing-grid-item">
-											<div class="marketing-grid-content" data-mh>
-												<h1 class="marketing-grid__title"><b>{{ item.title }}</b></h1>
-												<h4>{{ item.excerpt }}</h4>
-											</div><!-- /.nav-grid__content -->
-										</span><!-- /.nav-grid__item -->
-									</div><!-- /.col -->
-								{% endfor %}
-							</div><!-- /.row -->
-						</div><!-- /.nav-grid -->
-					</div><!-- /.col -->
-				</div><!-- /.row -->
-			</div><!-- /.container -->
-		</div><!-- /.section -->
-		{% endif %}
-
-		{% if site.category_list %}
-			<div class="section section--darker-theme-color-bg">
+		<div class="dev-guide-container">
+			<div class="section-category">
+		
 				<div class="container">
-						<div class="row">
-							<div class="col-md-12 amp-custom">
-								<div class="nav-grid nav-grid--out">
-									{% for category in site.category_list %}
-									<h3> {{ category.title}} </h3>
-										<div class="row">
-											{% for item in category.subs %}
-												<div class="col-sm-6 col-lg-4">
-													<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="nav-grid__item">
-														<div class="nav-grid__content" data-mh>
-															<h2 class="nav-grid__title {% if item.class %}  with-icon {{ item.class }} {% endif %} " >
-																{{ item.title }}
-															</h2>
-															<p>{{ item.excerpt }}</p>
-															<div class='nav-services'>
-																{% for service in item.services %} 
-																	<i onClick="window.open('{{ service.url }}', '_blank'); return false;" >
-																		{{ service.title }}
-																	</i>
-																{% endfor %}
-															</div >
-														</div><!-- /.nav-grid__content -->
-														<p class="nav-grid__btn">
-															{{ item.cta }}
-															<i class="icon icon--arrow-right"></i>
-														</p>
-													</a><!-- /.nav-grid__item -->
-												</div><!-- /.col -->
-											{% endfor %}
-										</div><!-- /.row -->
+					<div class="row">
+	
+						<div class="col-md-12">
+							<div class="dev-guide-heading">
+								<div class="row">
+									{% for item in page.marketing_grid %}
+										<div class="col-sm-8 col-lg-8">
+											<span>
+												<div class="dev-guide-content" data-mh>
+													<p class="dev-guide__title">{{ item.title }}</p>
+													<p class="dev-guide__excerpt">{{ item.excerpt }}</p>
+												</div><!-- /.nav-grid__content -->
+											</span><!-- /.nav-grid__item -->
+										</div><!-- /.col -->
 									{% endfor %}
-								</div><!-- /.nav-grid -->
-							</div><!-- /.col -->
-						</div><!-- /.row -->
-					
+								</div><!-- /.row -->
+								<div>
+									<a href="/media/cli_guide"> <button class="btn" >Install AWS Mobile CLI</button> </a>
+								</div>
+							</div><!-- /.nav-grid -->
+						</div><!-- /.col -->
+					</div><!-- /.row -->
 				</div><!-- /.container -->
 			</div><!-- /.section -->
-		{% endif %}
+			{% endif %}
+
+			{% if site.category_list %}
+				<div>
+					<div class="container">
+							<div class="row">
+								<div class="col-md-12 amp-custom">
+									<div class="nav-grid nav-grid--out">
+										{% for category in site.category_list %}
+										<div class="section-top section-top-category">
+											<div class="container">
+													<div class="header col-sm-11">
+														{{ category.title}}
+													</div>
+													<div class="subheader col-sm-11">
+														{{ category.excerpt}}
+													</div>
+													<div class="row">
+														{% for item in category.subs %}
+															<div class="col-xs-12 col-sm-6 col-lg-4">
+																<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="dev-guide-item">
+																	<img src={{ item.icon }} class="dev-guide-icon" {% if category.title == 'Front End Support' %}id='{{ item.id }}-logo'{% endif %} /> 
+																	<div class="dev-guide-content" data-mh>
+																		<div class="dev-guide-title" >
+																			{{ item.title }}
+																		</div>
+																		<div class="dev-guide-excerpt">{{ item.excerpt }}</div>
+																	</div><!-- /.nav-grid__content -->
+																	<div class="services-container">
+																		<div class='dev-guide-services'>
+																			{% for service in item.services %} 
+																				<i onClick="window.open('{{ service.url }}', '_blank'); return false;" >
+																					{{ service.title }}
+																				</i>
+																			{% endfor %}
+																		</div >
+																	</div>
+																</a><!-- /.nav-grid__item -->
+															</div><!-- /.col -->
+														{% endfor %}
+													</div><!-- /.row -->
+											</div>
+										</div>
+										{% endfor %}
+									</div><!-- /.nav-grid -->
+								</div><!-- /.col -->
+							</div><!-- /.row -->
+						
+					</div><!-- /.container -->
+				</div><!-- /.section -->
+			{% endif %}
+		</div>
 
 		{% include site-footer.html %}
 	</body>
