quick start page

--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -7,7 +7,7 @@
 		{% include site-header.html %}
 
 		{% if page.marketing_grid%}
-		<div class="dev-guide-container">
+		<div class="page-container">
 			<div class="section-category">
 		
 				<div class="container">
